# StoreScheduler

./: .gitignore  README.md  db.duckdb  pyproject.toml
app/: EDA.py  config.py  solver.py
db/: create_db.py  create_tables.py  generate_fake_data.py  populate_data.py  schema.sql
tests/: test_create_tables.py
